# hzy

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements-test.txt  setup.py
.github/workflows/: build_wheels.yml  standard-checks.yml
examples/: bindings.py  context.py  receive.py  send.py
hzy/: __init__.py  bindings.py  client.py  connection.py  dekstop.py  desktop.py  devices.py  event.py  exceptions.py  keys.py  request.py  utils.py
hzy/exceptions/: base.py
hzy/protocol/: _client.py  _parser.py  interface.py  protocol.xml
hzy/tests/: test1.py  test2.py
tests/: test_1.py
