[build-system]

requires = [
    "setuptools",
    "wheel",
    "snegg"
]


build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y libei",
    "yum install -y libeis",
    "yum install -y liboeffis",
    "if ! yum install -y libei; then echo 'libeis not avaiable(yet)'; fi",
    "if ! yum install -y libeis; then echo 'libeis not avaiable(yet)'; fi",
    "if ! yum install -y liboeffis; then echo 'libeis not avaiable(yet)'; fi",
]
