[build-system]

requires = [
    "setuptools",
    "wheel",
    "snegg @ git+https://gitlab.freedesktop.org/libinput/snegg"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]

build = ["cp310-*", "cp311-*"]
skip = "*musllinux*{i686,aarch64}*"
manylinux-x86_64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"

test-requires = "pytest"
test-command = "pytest {project}/tests"

[tool.cibuildwheel.linux]
before-all = [
    "/opt/python/cp310-cp310/bin/python -m venv venv",
    ". venv/bin/activate",
    "git clone https://gitlab.freedesktop.org/libinput/libei.git",
    "cd libei",
    "pip install attrs Jinja2",
    "yum install -y pkgconfig systemd-devel libxkbcommon-devel libxml2 doxygen python3-pytest meson",
    "meson --prefix=/usr builddir/",
    "ninja -C builddir/",
    "ninja -C builddir/ install",
]